src/test/resources/public/input/typechecking/fail/main_structure/fail01.jova
class Test{

}

class Main {

  public int main() {
    Main m;
    return 0;
  }

}